Fix scrollbar color not working on Firefox

--- a/src/container/App.css
+++ b/src/container/App.css
@@ -96,6 +96,7 @@
 
 html {
   scroll-behavior: smooth;
+  scrollbar-color: var(--font-color-1) var(--font-color-2);
 }
 
 body {
